--- a/ng-app/app/styles/app.css
+++ b/ng-app/app/styles/app.css
@@ -2,5 +2,14 @@
    Author's custom styles
    ========================================================================== */
 body{
-	background: #F66;
+	/**background: #F66;**/
+}
+#tweet-frame {
+margin-top: 10px;
+background-color: #EEE;
+padding-bottom: 5px;margin-left:30px;
+}
+.username_screen {
+font-size: 10px;
+color: #999;
 }
